testsuite/tests/overloadedrecflds/should_fail/NFSDuplicate.stderr
NFSDuplicate.hs:8:16: error: [GHC-29916]
    Multiple declarations of ‘foo’
    Suggested fix:
      Perhaps you intended to use the ‘DuplicateRecordFields’ extension
    At: NFSDuplicate.hs:8:16-18
        NFSDuplicate.hs:7:16-18

